Fixed Incorrect Cursor Icons, Too large text, and added text padding for reading easability
Update styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,8 @@
     font-family: 'Special Elite', cursive;
     font-weight: bold;
     font-size: inherit;
+    cursor:default;
+    /*text-indent: 2%;*/
 }
 
 :root {
@@ -103,7 +105,7 @@
     vertical-align: middle;
     border-bottom: 0.3vh double #b5a28e;
     align-items: center;
-    font-size: 100%;
+  
 }
 
 .dialog-options-wrapper {
@@ -125,12 +127,18 @@
     border-color: #5e361d;
     margin-top: 2%;
     font-size: 1.2em;
+    cursor: pointer;
+    padding: 1% 2%;
 }
 
 .dialog-options:hover {
     border-style: inset;
     background-color: var(--dialog-hover-colour)
 }
+
+/*.total-balance {
+    font-size: 0.5em;
+}*/
 
 .image {
     height: 100%;
@@ -148,6 +156,7 @@
     height: 60%;
     position: relative;
     bottom: 20%;
+    cursor: pointer;
 }
 
 .float-down {
@@ -162,15 +171,20 @@
     height: 60%;
     position: relative;
     bottom: 20%;
+    cursor: pointer;
 }
 
  
 .text-block {
     position: absolute;
-    font-size: 2em;
+    font-size: 1.5em;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -80%);
+}
+
+.mouse_pointer {
+    cursor: pointer;
 }
 
 #donutchart{
@@ -179,7 +193,22 @@
     height: 300px;
 }
 
-button{font-size: 1.5em;}
+select{
+    cursor: pointer;
+}
+
+option{
+    cursor: pointer;
+}
+
+button{
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+input{
+    cursor:text;
+}
 
 @media (max-aspect-ratio: 9/16) {
     .main {
@@ -199,19 +228,21 @@ button{font-size: 1.5em;}
     margin-top: auto;
     margin-bottom: 2%;
     width: 100%;
-    height: 20%;
+    height: 25%;
 }
 
 .typing{
     padding-top: 2.5%;
     padding-bottom: 2.5%;
-    width: 100%;
+    padding-left: 2%;
+    padding-right: 2%;
+    width: auto;
     /*animation: typing 2s steps(44), blink .5s step-end infinite alternate;*/
     animation: fade-in 2s;
     opacity: 1;
     white-space: wrap;
     overflow-y: auto;
-    border-right: 3px solid;
+    /*border-right: 3px solid;*/
 	font-size: 2em;
 }
 
